# lf-brain-tracking

./: .gitignore  LICENSE  Output_Combined.xlsx  README.md  config_reconstruct_volume_20251110-184918.json  config_reconstruct_volume_20251111-194454.json  config_reconstruct_volume_20251111-194710.json  config_reconstruct_volume_20251111-201304.json  demo.nii  download_dataset_from_repo.py  high_school_projects_readme.md  lf-mri.json  pyproject.toml  requirements.txt  requirements_clean.txt  steps pending.py  training_log.txt
Denoi_data/: data_read.py
Niftymic_related_r21/: .~lock.docker_commands_Niftymic.docx#
R21_pipeline/: display_nii.py  docker_commands_Niftymic.docx
SRR_SS_Mon/: Segmentation_monash.py  Step_book.py  config_ss.py  data_read.py  display_nifti.py  main_self_supervised.py  main_ss_collage.py  main_supervised.py  monash_zssr_demo.py  monash_zssr_demo_3D.py  monash_zssr_demo_rerun.py  monash_zssr_demo_slices.py  srr_ss_new_model.py  supervised_train.py  utils1.py
SRR_r21/: data_read.py  download_data.py  read.py  read_nii.py
SRR_ss_monash/: data_read.py  main_self_supervised.py  supervised_train.py
Seg-LFsim/: Unet.py
Subject_specific_followup_model/: data_read.py
data_read_code/: demo_read_data.py
motion_correction/: axial_redo.tfm  axial_redo_slice0.tfm  axial_redo_slice1.tfm  axial_redo_slice10.tfm  axial_redo_slice100.tfm  axial_redo_slice101.tfm  axial_redo_slice102.tfm  axial_redo_slice103.tfm  axial_redo_slice104.tfm  axial_redo_slice105.tfm  axial_redo_slice106.tfm  axial_redo_slice107.tfm  axial_redo_slice108.tfm  (+290 more)
src/: utils.py  (+10 more)
(+213 files in other folders)
