[project]
name = "lf-brain-tracking"
version = "0.1.0"
description = "Light field brain tracking project"
authors = [
    { name="Your Name", email="your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "GPUtil"
]

[project.urls]
Homepage = "https://github.com/{your_github_username}/lf-brain-tracking"

